@@ -9,6 +9,11 @@ Features
   This method provides conflict detection and is the suggested way to add
   properties to a request.
 
+- Responses generated by Pyramid's ``static_view`` now use
+  a ``wsgi.file_wrapper`` (see
+  http://www.python.org/dev/peps/pep-0333/#optional-platform-specific-file-handling)
+  when one is provided by the web server.
+
 1.3a5 (2012-01-09)
 ==================
 
